# CLPM_Development

./: .env.example  .gitignore  CRITICAL_FIXES_SUMMARY.md  DIAGNOSTICS_SERVICE_ANALYSIS.md  DIAGNOSTICS_WORKFLOW_COMPLETE.md  FRONTEND_BUG_FIXES.md  IMPLEMENTATION_GUIDE.md  INFLUXDB_MIGRATION.md  KPI_HISTORY_TIMEWINDOW_FIX.md  QUICK_FIX_GUIDE.md  QUICK_START_INFLUXDB.md  README.md  REPORTING_SYSTEM_FINAL_STATUS.md  REPORTING_SYSTEM_SUMMARY.md  SETUP_GUIDE.md  SIMPLE_REPORTS_MVP.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-start-dev.bat  docker-start-dev.sh  docker-start.bat  env.docker  restart-services.bat  restart-services.ps1  start-all.bat  start-services.ps1  tatus -v  test-db-values.sql  test-diagnostics.js  test-diagnostics.ps1  test-diagnostics.py  test-influx-api.js  test-opcua-complete.js  verify-report-fix.bat  verify-reporting-system.sh
.claude/: settings.local.json
db/: insert_10_loops.sql  seed_data.sql
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vite.config.ts
python-services/data-streaming-service/: Dockerfile  README.md  env.example  pyproject.toml  run_service.py  test_service.py
python-services/data-streaming-service/src/data_streaming_service/: __init__.py  app.py  data_generator.py  influx_client.py
python-services/diagnostics_service/: Dockerfile  pyproject.toml
python-services/diagnostics_service/src/diagnostics_service/: __init__.py  app.py  oscillation.py  stiction.py
scripts/: README.md  load-historical-data.js  load-influxdb-data.js  package.json  test-connection.js  (+3 more)
(+202 files in other folders)
